Fix profile picture size and alignment

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -73,60 +73,19 @@ body {
 
 .profil-dash {
     height: 110px;
+    line-height: initial;
 }
 
 .undefined-patient {
-    width: 110px;
-    height: 110px;
+    max-width: 100px;
+    max-height: 100px;
     background: url(/assets/images/bras-cassé.jpg) center/cover;
+}
+
+.picture-patient {
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 25%;
-}
-
-.picture-profile-patient {
-    width: 110px;
-    height: 110px;
-    object-fit: center/cover;
-    border-radius: 25%;
-}
-
-div.modal-footer>form {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-
-}
-
-#profile_picture {
-    width: 100%;
-
-}
-
-div#profile-picture>fieldset>div.vich-file {
-    display: flex;
-    justify-content: center;
-
-}
-
-div.vich-file>div.mb-3 {
-    display: flex;
-    justify-content: center;
-}
-
-div.vich-file>div.mb-3>div.form-check {
-    display: flex;
-    justify-content: center;
-    width: 60%;
-}
-
-#profile_picture_profilePicture_delete {
-    margin-right: 1em;
-}
-
-
-.upload-form-picture {
-    margin-bottom: 2em;
 }
 
 .progress-title {
